--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -19,6 +19,7 @@ jobs:
 
       - name: Install Dependencies
         run: |
+          sudo dpkg --add-architecture i386  # Enable 32-bit support
           sudo apt-get update
           sudo apt-get install -y build-essential ccache openjdk-8-jdk zlib1g-dev libncurses5:i386 libstdc++6:i386 zlib1g:i386
 
