--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -23,9 +23,14 @@ jobs:
           sudo apt-get update
           sudo apt-get install -y build-essential ccache openjdk-8-jdk zlib1g-dev libncurses5:i386 libstdc++6:i386 zlib1g:i386
 
+      - name: Install cython
+        run: |
+          sudo apt-get install -y python3-pip
+          pip3 install cython
+
       - name: Install jnius
         run: |
-          sudo apt-get install python3-jnius
+          pip3 install git+https://github.com/kivy/pyjnius.git
 
       - name: Get Date
         id: get-date
