--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -26,7 +26,7 @@ jobs:
       - name: Install cython
         run: |
           sudo apt-get install -y python3-pip
-          pip3 install cython
+          pip3 install --upgrade cython
 
       - name: Install jnius
         run: |
